@@ -1,5 +1,10 @@
 2009-03-10  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* MonoDevelop.Ide.Gui.Pads/MonodocTreePad.cs: Don't try to
+	  fill the tree when there is no help tree.
+
+2009-03-10  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* MonoDevelop.Ide.Gui.Pads/MonodocTreePad.cs: Possible fix for
 	  bug #483723 - Gtk-criticals infinite loop.
 
